--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -1,90 +1,64 @@
-set-option -g prefix C-a
+# improve colors
+set -g default-terminal "screen-256color"
+
+# enable copy-paste http://goo.gl/DN82E
+# enable RubyMotion http://goo.gl/WDlCy
+set -g default-command "reattach-to-user-namespace -l zsh"
+
+# act like vim
+setw -g mode-keys vi
+
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
+
+set -g prefix C-a
+bind C-a send-prefix
 unbind C-b
 
-#### SHELL
-set -g default-command /usr/local/bin/zsh
-set -g default-command /usr/local/bin/zsh
+set -sg escape-time 1
 
-#### COLOUR
+set  -g      base-index 1
+setw -g pane-base-index 1
 
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour4
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour2
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour1
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-set-option -g message-bg colour235
-set-option -g message-fg colour13
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour250
-
-bind r source-file ~/.tmux.conf \; display 'config reloaded'
-
-setw -g monitor-activity on
-set -g visual-activity on
-
-set -g status-right-length 60
-set -g status-left-length 60
-set -g status-right '#[fg=colour241]#(date +"%a. %d-%b-%Y %H-%M") - #(uptime | cut -d "," -f 4)'
-
-bind H resize-pane -L 5000\; resize-pane -R 20
-bind J resize-pane -D 5000\; resize-pane -U 5
-bind K resize-pane -U 5000\; resize-pane -D 5
-bind L resize-pane -R 5000\; resize-pane -L 20
-
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
-
-#keybindings to make resizing easier
-bind -r C-h resize-pane -L 1
-bind -r C-j resize-pane -D 1
-bind -r C-k resize-pane -U 1
-bind -r C-l resize-pane -R 1
-
-bind -r C-H resize-pane -L 5
-bind -r C-J resize-pane -D 5
-bind -r C-K resize-pane -U 5
-bind -r C-L resize-pane -R 5
+bind r source-file ~/.tmux.conf \; display "~/.tmux.conf reloaded!"
 
 bind | split-window -h
 bind - split-window -v
 
-unbind Up
-unbind Down
-bind Up new-window -d -n tmp \; swap-pane -s tmp \; select-window -t tmp
-bind Down last-window \; swap-pane -s tmp \; kill-window -t tmp
-bind e setw synchronize-panes on
-bind E setw synchronize-panes off
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
-set -g base-index 1
+bind -r H resize-pane -L 15
+bind -r J resize-pane -D 15
+bind -r K resize-pane -U 15
+bind -r L resize-pane -R 15
 
-bind C-T new-window
-bind C-W kill-window
+set -g default-terminal "screen-256color"
 
-unbind C-n
-unbind C-p
-bind ] next-window
-bind [ previous-window 
+set  -g status-fg                  colour243
+set  -g status-bg                  colour233
 
-bind-key a send-prefix
+setw -g window-status-fg           default
+setw -g window-status-bg           default
+setw -g window-status-attr         dim
+
+setw -g window-status-current-fg   white
+setw -g window-status-current-bg   colour235
+setw -g window-status-current-attr bright
+
+set -g message-fg                  white
+set -g message-bg                  colour233
+
+set -g status-utf8 on
+
+set -g status-right "#S/#W/#P"
+set -g status-left ""
+
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
